<resources>
    <string name="app_name">BEATtheCLOCK</string>
    <string name="beat_the_clock">BEAT the CLOCK</string>
    <string name="login_as_qt">LOGIN as QT</string>
    <string name="login_as_qm">Login as QM</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="beat_the_clock1">BEAT the CLOCK</string>
    <string name="log_in1">Log In</string>
    <string name="beat_the_clock2">BEAT the CLOCK</string>
    <string name="password2">Password</string>
    <string name="user_name1">User Name</string>
    <string name="log_in2">Log In</string>
    <string name="log_in3">Log In</string>
    <string name="add_del_qt">Add/Del QT</string>
    <string name="add_del_question">Add/Del Question</string>
    <string name="log_out1">Log Out</string>
    <string name="qt_stats">QT Stats</string>
    <string name="quiz_master">QUIZ MASTER</string>
    <string name="add_question">Add Question</string>
    <string name="enter_option_3">Enter Option 3</string>
    <string name="enter_option_4">Enter Option 4</string>
    <string name="enter_time_to_complete">Enter Time to Complete</string>
    <string name="insert_answer_here">Insert Answer Here</string>
    <string name="insert_option_2">Insert Option 2</string>
    <string name="type_new_question_here">Type New Question Here</string>
    <string name="view_existing_questions">View Existing Questions</string>
    <string name="add_questions">ADD QUESTIONS</string>
    <string name="add_quiz_takers">ADD QUIZ TAKERS</string>
    <string name="delete_quiz_takers">DELETE QUIZ TAKERS</string>
    <string name="delete_all_users">Delete All Users</string>
    <string name="delete_user">Delete User</string>
    <string name="insert_username_to_delete">Insert Username to Delete</string>
    <string name="show_exisiting_users">Show Exisiting Users</string>
    <string name="_1">1</string>
    <string name="round">ROUND</string>
    <string name="restart">RESTART</string>
    <string name="questions">-</string>
    <string name="_one">1</string>
    <string name="round1">ROUND</string>
    <string name="user">User</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="add_quiz_takers1">Add Quiz Takers</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="enter_user_name_here">Enter User Name Here</string>
    <string name="show_existing_quiz_takers">Show Existing Quiz Takers</string>
    <string name="ten">10</string>
    <string name="delete_stats">delete_Stats</string>
    <string name="insert_id_to_delete">insert_ID_to_delete</string>
    <string name="insert_id">Insert ID</string>
    <string name="delete_userq">Delete User</string>
    <string name="reset_points">Reset Points</string>
    <string name="admin1">admin</string>
    <string name="admin2">admin</string>
    <string name="start">START</string>
    <string name="textview">TextView</string>
    <string name="welcome">WELCOME</string>
</resources>
