<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.niyaz.beattheclock.MainActivity">

    <TextView
        android:text="@string/beat_the_clock1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textStyle="normal|bold|italic"
        android:textSize="30sp"
        tools:fontFamily="cursive"/>

    <TextView
        android:text="@string/user_name"
        android:id="@+id/usertext"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="98dp"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

    <Button
        android:text="@string/log_in2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passedit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:id="@+id/logbutton1"
        android:onClick="onclicklogin"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <TextView
        android:text="@string/password"
        android:id="@+id/passtext"
        android:layout_marginTop="64dp"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/usertext"
        android:layout_alignLeft="@+id/usertext"
        android:layout_alignStart="@+id/usertext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passedit"
        android:text="@string/admin1"
        android:layout_alignBottom="@+id/passtext"
        android:layout_alignLeft="@+id/useredit"
        android:layout_alignStart="@+id/useredit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/useredit"
        android:text="@string/admin2"
        android:layout_alignTop="@+id/usertext"
        android:layout_alignRight="@+id/logbutton1"
        android:layout_alignEnd="@+id/logbutton1" />

</RelativeLayout>
