<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/insertquesedit"
        android:layout_below="@+id/typequestext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/insert_answer_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertquesedit"
        android:layout_centerHorizontal="true"
        android:id="@+id/anstext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/anstext"
        android:layout_centerHorizontal="true"
        android:id="@+id/ansedit"
        android:gravity="center_vertical|center" />

    <TextView
        android:text="@string/insert_option_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ansedit"
        android:layout_centerHorizontal="true"
        android:id="@+id/op1text" />

    <TextView
        android:text="@string/enter_option_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/op2edit"
        android:layout_centerHorizontal="true"
        android:id="@+id/op3text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"

        android:layout_below="@+id/op3text"
        android:layout_alignLeft="@+id/op2edit"
        android:layout_alignStart="@+id/op2edit"
        android:id="@+id/op3edit"
        android:gravity="center_vertical|center" />

    <TextView
        android:text="@string/enter_option_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/op3edit"
        android:layout_alignRight="@+id/op3text"
        android:layout_alignEnd="@+id/op3text"
        android:id="@+id/opt4text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/opt4text"
        android:layout_alignLeft="@+id/op3edit"
        android:layout_alignStart="@+id/op3edit"
        android:id="@+id/op4edit"
        android:gravity="center_vertical|center" />

    <TextView
        android:text="@string/enter_time_to_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/op4edit"
        android:layout_centerHorizontal="true"
        android:id="@+id/timetext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/timetext"
        android:id="@+id/timeedit"
        android:layout_alignRight="@+id/timetext"
        android:layout_alignEnd="@+id/timetext"
        android:layout_alignLeft="@+id/timetext"
        android:layout_alignStart="@+id/timetext"
        android:gravity="center_vertical|center"
        android:text="@string/ten" />

    <Button
        android:text="@string/view_existing_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/typequestext"
        android:id="@+id/viewquesbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onclickshowques" />

    <TextView
        android:text="@string/type_new_question_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typequestext"
        android:layout_below="@+id/viewquesbutton"
        android:layout_alignLeft="@+id/anstext"
        android:layout_alignStart="@+id/anstext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/op2edit"
        android:gravity="center_vertical|center"
        android:layout_below="@+id/op1text"
        android:layout_alignLeft="@+id/ansedit"
        android:layout_alignStart="@+id/ansedit" />

    <Button
        android:text="@string/add_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adddbbutton"
        android:onClick="onclickaddques"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>