<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/round"
        android:layout_height="60dp"
        android:id="@+id/roundtext"
        android:layout_width="250dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="40sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:text="@string/_1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/roundtextset"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/roundtext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold"
        android:textSize="40sp" />

    <Button
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/playstarttext"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:textSize="50sp"
        android:onClick="onclickplay"
        android:background="@drawable/buttonshape"
        android:shadowColor="#FF441F"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5" />

    <TextView
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_below="@+id/roundtext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:layout_toLeftOf="@+id/roundtextset"
        android:layout_toStartOf="@+id/roundtextset"
        android:layout_height="50dp"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:textSize="20sp" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/roundtextset"
        android:layout_toRightOf="@+id/textView3"
        android:id="@+id/usernamedisp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textStyle="normal|bold|italic"
        android:textSize="20sp" />

</RelativeLayout>