<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:text="@string/show_exisiting_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/showexistingbutton"
        android:onClick="onclickshowstatus" />

    <TextView
        android:text="@string/insert_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showexistingbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:id="@+id/delusertext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="38dp"
        android:id="@+id/deluseredit"
        android:layout_below="@+id/delusertext"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center" />

    <Button
        android:text="@string/delete_userq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:id="@+id/delalluserbutton"
        android:onClick="onclickdeluser"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:text="@string/reset_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:id="@+id/delbutton"
        android:onClick="onclickdelstats"
        android:layout_above="@+id/delalluserbutton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>
</RelativeLayout>