<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:text="@string/add_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:id="@+id/addbutton"
        android:onClick="onclickbuttons"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:text="@string/add_del_qt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:id="@+id/addqtbutton"
        android:layout_below="@+id/addbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onclickbuttons"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:text="@string/qt_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/statusbutton"
        android:layout_below="@+id/addqtbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onclickbuttons"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <TextView
        android:text="@string/quiz_master"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:fontFamily="casual" />

</RelativeLayout>