<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:text="@string/add_quiz_takers1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/addqtbutton"
        android:onClick="onclickadddata" />

    <Button
        android:text="@string/show_existing_quiz_takers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showqtButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onclickshow" />

    <TextView
        android:text="@string/enter_user_name_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showqtButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:id="@+id/newusertext"
        android:gravity="center"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/enter_password_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/newusertext"
        android:layout_alignEnd="@+id/newusertext"
        android:id="@+id/newpasstext"
        android:gravity="center"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="45dp"
        android:id="@+id/newpassedit"
        android:layout_below="@+id/newpasstext"
        android:layout_alignLeft="@+id/newuseredit"
        android:layout_alignStart="@+id/newuseredit"
        android:gravity="center_vertical|center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="34dp"
        android:id="@+id/newuseredit"
        android:layout_below="@+id/newusertext"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center" />
</RelativeLayout>