<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/round1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rnd"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/_one"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/rnd"
        android:id="@+id/rndno"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:textSize="40sp" />

    <Button
        android:text="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/op3"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/op2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onclickanswers" />

    <Button
        android:text="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/op1"
        android:layout_below="@+id/ques"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:onClick="onclickanswers" />

    <Button
        android:text="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/op2"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/op1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onclickanswers" />

    <Button
        android:text="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/op4"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/op3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onclickanswers" />

    <TextView
        android:text="@string/questions"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="41dp"
        android:id="@+id/ques"
        android:layout_below="@+id/rnd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/time_remaining"
        android:layout_width="match_parent"
        android:id="@+id/timetext"
        android:layout_below="@+id/rnd"
        android:layout_height="40dp"
        android:layout_toLeftOf="@+id/rndno"
        android:layout_toStartOf="@+id/rndno"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:textSize="20sp" />

    <TextView
        android:text="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timetext"
        android:layout_toRightOf="@+id/timetext"
        android:id="@+id/settime"
        android:layout_below="@+id/rnd"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:text="@string/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uname"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/op4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:gravity="center"
        android:layout_toStartOf="@+id/unameset"
        android:layout_toLeftOf="@+id/unameset" />

    <TextView
        android:text="0"
        android:id="@+id/unameset"
        android:layout_height="45dp"
        android:textStyle="normal|bold"
        android:gravity="center"
        android:layout_width="90dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/settime"
        android:layout_toStartOf="@+id/settime"
        android:layout_marginRight="43dp"
        android:layout_marginEnd="43dp" />

    <TextView
        android:text="Out of 1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/quescounter"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/op4" />

</RelativeLayout>